Fix the position of page popups for OOPIF GuestViews on Mac

This CL fixes a recent regressions in ExtensionsOptions pages where the popup
was misplaced. The root cause was that BrowserPluginGuest::OnShowPopup does
not transform the coordinates correctly for OOPIF guests. This regression was
triggered after OOPIF-GuestViews went active by default.

This CL fixes the issue by transforming the point to root coord space first.

Bug: 772840

Change-Id: I87f314596e003e0eb74405f6be0018817745bf61
Reviewed-on: https://chromium-review.googlesource.com/714492
Commit-Queue: Ehsan Karamad <ekaramad@chromium.org>
Reviewed-by: Lucas Gadani <lfg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508377}
Former-commit-id: 98b38fa0f40d63b09019f4536f6ccde70ed79797